--- a/com.bgdt.AgriControl/res/values/strings.xml
+++ b/com.bgdt.AgriControl/res/values/strings.xml
@@ -23,4 +23,6 @@
     
     <string name="closePreview">关闭预览</string>
 	<string name="previewstring">预览窗口</string>
+	<string name="nonetworktip">请先连接网络！</string>
+	  
 </resources>
